src/styles/App.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    * {
        @apply box-border p-0 m-0;
    }

    html {
        @apply scroll-smooth;
    }

    body {
        @apply mt-0 ml-0 mr-0 mb-headerHeight font-bodyFont text-normalFontSize bg-bodyColor text-textColor;
    }

    h1,h2,h3,h4 {
        @apply text-titleColor font-fontSemiBold;
    }

    ul {
        @apply list-none;
    }

    li {
        @apply flex flex-col w-28;
    }

    img {
        @apply max-w-full;
    }

    .navLink {
        @apply flex flex-row;
    }

    .section {
        @apply pt-8 pr-0 pl-0 pb-16; 
    }

    .sectionTitle {
        @apply text-h1FontSize;
    }

    .sectionSubtitle {
        @apply block text-smallFontSize mb-mb3
    }

    .sectionTitle,.sectionSubtitle {
        @apply text-center;
    }

    .container {
        @apply max-w-3xl ml-mb105 mr-mb105;
    }

    .ulGrid {
        @apply grid gap-6;
    }

    .icon {
        @apply mr-1;
    }

    .header {
        @apply w-full fixed bottom-0 left-0 z-zFixed bg-bodyColor;
    }

    .navClose,.navBtns {
        @apply mt-1;
    }

    .nav {
        max-width: 968px;
        @apply h-headerHeight flex sm:justify-between items-center;
    }

    .navLogo,.navToggle {
        @apply text-titleColor font-fontMedium
    }

    .navLogo:hover {
        @apply text-firstColor
    }

    .navToggle {
        font-size: 1.1rem;
        @apply cursor-pointer absolute right-5 bottom-4;
    }

    .navToggle:hover {
        @apply text-firstColor;
    }

    @media screen and (max-width: 767px) {
        .navMenu {
            @apply fixed left-0 w-full bg-bodyColor pt-8 pr-6 pb-16 pl-6 rounded-t-3xl rounded-r-3xl;
            box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
            transition: .3s;
            bottom: -100%;
        }
    }

    .navList {
        @apply grid-cols-3 gap-8;
    }

    .navLink {
        @apply flex flex-col items-center text-smallFontSize text-titleColor font-fontMedium cursor-pointer;
    }

    .navLink:hover {
        @apply text-firstColor;
    }

    .active {
        @apply text-firstColor;
    }

    .navClose {
        @apply absolute right-6 bottom-2 cursor-pointer text-firstColor hover:text-firstColorAlt;
    }
}

/* Home */

@layer base {
    .homeContainer {
        @apply gap-4;
    }

    .homeContent {
        grid-template-columns: .5fr 3fr;
        @apply items-center;
    }

    .homeSocial {
        @apply grid gap-y-8 text-xl;
        grid-template-columns: max-content;
    }

    .homeSocial a {
        @apply ml-1;
    }

    .buttonIcon {
        @apply flex flex-row w-32 cursor-pointer;
    }

    .buttonFlex {
        @apply flex flex-row;
    }

    .homeSocialIcon {
        @apply text-xl text-firstColor
    }

    .homeSocialIcon:hover {
        @apply text-firstColorAlt
    }

    .homeBlob {
        @apply w-52 fill-firstColor;
    }

    .homeBlobImg {
        @apply w-48;
    }

    .homeData {
        grid-column: 1/3;
    }

    .homeTitle {
        @apply text-bigFontSize;
    }

    .homeSubtitle {
        @apply text-h3FontSize text-textColor font-fontMedium mb-mb75;
    }

    .homeDescription {
        @apply mb-mb2 text-justify;
    }

    .homeScroll {
        @apply hidden
    }

    .homeScrollButton {
        @apply text-firstColor;
        transition: .3s;
    }

    .homeScrollButton:hover {
        transform: translateY(.25rem);
    }

    .homeScrollMouse {
        @apply text-xl;
    }

    .homeScrollName {
        @apply text-titleColor font-fontMedium mr-mb25 mt-1;
    }

    .homeScrollArrow {
        @apply text-lg;
    }

    .button {
        @apply inline-block bg-firstColor text-white font-fontMedium flex-row;
        padding: 6px;
        border-radius: .5rem;
    }

    .button:hover {
        @apply bg-firstColorAlt
    }

    .buttonIcon {
        @apply ml-mb5;
        transition: .3s;
    }

    .buttonFlex {
        @apply inline-flex items-center;
    }
}

/* About */

@layer base {
    .aboutImg {
        @apply justify-self-center -mt-10;
        border-radius: .5rem;
    }

    .aboutDescription {
        @apply mb-mb25 text-justify;
    }

    .aboutInfo {
        @apply flex justify-evenly mb-mb205;
    }

    .aboutInfoTitle {
        @apply text-h2FontSize font-fontSemiBold text-titleColor;
    }

    .aboutInfoName {
        @apply text-smallerFontSize;
    }

    .aboutInfoTitle, .aboutInfoName {
        @apply block text-center;
    }

    .aboutButtons {
        @apply flex justify-center;
    }
}
/* ... */

